--- a/Desafios Propostos/Projeto We Care DESAFIO 2/index.html
+++ b/Desafios Propostos/Projeto We Care DESAFIO 2/index.html
@@ -13,27 +13,30 @@
 </head>
 
 <body>
-    <header>
-        <a class="link-header">HOME</a>
-        <a class="link-header">ABOUT</a>
-        <a class="link-header">PRODUCT</a>
-        <a class="link-header">SERVICE</a>
-        <a class="link-header">CONTACT</a>
-        <button class="button-header">LOG IN</button>
-    </header>
+    <div class="container">
+        <header>
+            <a class="link-header">HOME</a>
+            <a class="link-header">ABOUT</a>
+            <a class="link-header">PRODUCT</a>
+            <a class="link-header">SERVICE</a>
+            <a class="link-header">CONTACT</a>
+            <button class="button-header">LOG IN</button>
+        </header>
 
-    
-    <main>
-        <img class="logo-imagem" src="./img/WeCare.png" alt="Imagem We Care">
-        <section>
-            <h1 class="title-center">We Care</h1>
-            <h2 class="sub-title">About Your Pet</h2>
-            <p class="text-title">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis porro rerum quas et fugiat, distinctio
-                modi eaque tempora, minus dolorum illum ratione rem autem esse laborum adipisci id consequatur.
-                Suscipit.</p>
-            <button class="button-main">Explore</button>
-        </section>
-    </main>
+
+        <main>
+            <img class="logo-imagem" src="./img/WeCare.png" alt="Imagem We Care">
+            <section>
+                <h1 class="title-center">We Care</h1>
+                <h2 class="sub-title">About Your Pet</h2>
+                <p class="text-title">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis porro rerum quas
+                    et fugiat, distinctio
+                    modi eaque tempora, minus dolorum illum ratione rem autem esse laborum adipisci id consequatur.
+                    Suscipit.</p>
+                <button class="button-main">Explore</button>
+            </section>
+        </main>
+    </div>
 </body>
 
 </html>
