atualizando aulas javascript 6

--- a/Aulas/Exercicios JS2 NODE/index.html
+++ b/Aulas/Exercicios JS2 NODE/index.html
@@ -10,7 +10,10 @@
     <h1>JavaScript</h1>
     <input id="main-input" placeholder="DIgite aqui">
     <p class="paragraph-js"> Começando nossa jornada para aprender</p>
-    <p class="paragraph-js"> A linguagem de programação mais versatil do momento</p>
+    <p class="paragraph-js"> A linguagem de programação mais versatil do mundo</p>
+
+    <img src="">
+
     <button class="main-button">Clique aqui</button>
 </body>
 
