atualização de aulas 7

--- a/Aulas/javascript 2 NODE JS/Exercicios JS2 NODE fixação exemplar/index.html
+++ b/Aulas/javascript 2 NODE JS/Exercicios JS2 NODE fixação exemplar/index.html
@@ -12,6 +12,8 @@
     <p class="paragraph-js"> Começando nossa jornada para aprender</p>
     <p class="paragraph-js"> A linguagem de <b>programação</b> mais versatil do mundo</p>
 
+    <img src="">
+
     <button class="main-button">Clique aqui</button>
 </body>
 
