atualizaçao de aula 8

--- a/Aulas/javascript 2 NODE JS/index.html
+++ b/Aulas/javascript 2 NODE JS/index.html
@@ -8,10 +8,11 @@
 </head>
 <body>
     <h1>JavaScript</h1>
-    <input id="main-input" placeholder="DIgite aqui">
+    <input   onkeypress="digiteiNoInput()"    id="main-input" placeholder="DIgite aqui">
     <p class="paragraph-js"> Começando nossa jornada para aprender</p>
     <p class="paragraph-js"> A linguagem de programação mais versatil do momento</p>
-    <button class="main-button">Clique aqui</button>
+    <button  onclick="cliqueiNoBotao()"            class="main-button">Clique aqui</button>
+    <p class="resposta-js"></p>
 </body>
 
 <script src="./scripts.js"></script>
