Atualização de aulas javascript9

--- a/Aulas/javascript 2 NODE JS/Exercicios Java Script/3 - AddEventListener/index.html
+++ b/Aulas/javascript 2 NODE JS/Exercicios Java Script/3 - AddEventListener/index.html
@@ -8,11 +8,13 @@
 </head>
 <body>
     <h1>JavaScript</h1>
-    <input   onkeypress="digiteiNoInput()"    id="main-input" placeholder="DIgite aqui">
+    <input id="main-input" placeholder="DIgite aqui">
     <p class="paragraph-js"> Começando nossa jornada para aprender</p>
-    <p class="paragraph-js"> A linguagem de programação mais versatil do momento</p>
-    <button  onclick="cliqueiNoBotao()"            class="main-button">Clique aqui</button>
-    <p class="resposta-js"></p>
+    <p class="paragraph-js"> A linguagem de <b>programação</b> mais versatil do mundo</p>
+
+    <img src="">
+
+    <button class="main-button">Clique aqui</button>
 </body>
 
 <script src="./scripts.js"></script>
