--- a/Aulas/javascript 2 NODE JS/Exercicios Java Script/3 - AddEventListener/index.html
+++ b/Aulas/javascript 2 NODE JS/Exercicios Java Script/3 - AddEventListener/index.html
@@ -8,13 +8,17 @@
 </head>
 <body>
     <h1>JavaScript</h1>
-    <input id="main-input" placeholder="DIgite aqui">
-    <p class="paragraph-js"> Começando nossa jornada para aprender</p>
-    <p class="paragraph-js"> A linguagem de <b>programação</b> mais versatil do mundo</p>
+    <input id="mainInput" placeholder="DIgite aqui">
 
-    <img src="">
+    <!-- Criar um select com varios valores -->
+    <select> 
+        <option>HTML</option>  <!-- Valores do Select -->
+        <option>CSS</option>
+        <option>React</option>
+        <option>Node</option>
+    </select>
 
-    <button class="main-button">Clique aqui</button>
+    <button class="mainButton">Clique aqui</button>
 </body>
 
 <script src="./scripts.js"></script>
