exercicio JS conversor de moeda edit

--- a/Aulas/javascript 2 NODE JS/Exercicios Java Script/4 - Exercicio JS Conversor/index.html
+++ b/Aulas/javascript 2 NODE JS/Exercicios Java Script/4 - Exercicio JS Conversor/index.html
@@ -42,17 +42,17 @@
         <button>Converter</button>
 
         <section>
-            <div>
+            <div class="currency-box">
                 <img src="./assets/brasil.png" alt="logo-moeda-a-converter">
-                <p>Real</p>
-                <p  strong>R$ 0,00</p>
-                <img src="./assets/seta.png" alt="seta">
+                <p class="currency">Real</p>
+                <p class="currency-value">R$ 0,00</p>
+                <img class="arrow-img" src="./assets/seta.png" alt="seta">
             </div>
 
-            <div>
+            <div class="currency-box">
                 <img src="./assets/usa.png" alt="logo-moeda-a-converter">
-                <p>Dolar</p>
-                <p strong>U$ 0,00</p>
+                <p class="currency">Dolar</p>
+                <p class="currency-value">U$ 0,00</p>
             </div>
         </section>
     </main>
