edit organizar tamanho do display

--- a/Aulas/javascript 2 NODE JS/Exercicios Java Script/4 - Exercicio JS Conversor/index.html
+++ b/Aulas/javascript 2 NODE JS/Exercicios Java Script/4 - Exercicio JS Conversor/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <div class="container">
-    <img src="./assets/logo.gif" alt="Logo conversor de moeda">
+    <img class="logo" src="./assets/logo.gif" alt="Logo conversor de moeda">
 
     <main>
         <label>
