--- a/Aulas/javascript 2 NODE JS/Exercicios Java Script/4 - Exercicio JS Conversor/index.html
+++ b/Aulas/javascript 2 NODE JS/Exercicios Java Script/4 - Exercicio JS Conversor/index.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" href="./styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Conversor de Moedas</title>
@@ -14,50 +15,54 @@
 
 <body>
     <div class="container">
-    <img class="logo" src="./assets/logo.gif" alt="Logo conversor de moeda">
+        <img class="logo" src="./assets/logo.gif" alt="Logo conversor de moeda">
 
-    <main>
-        <label>
-            Converter <b>de</b>
-            <select>
-                <option>R$ Real Brasileiro</option>
-            </select>
-        </label>
+        <main>
+            <label>
+                Converter <b>de</b>
+                <select class="currency-select-first">
+                    <option value="real">R$ Real Brasileiro</option>
+                    
+                </select>
+            </label>
 
-        <label>
-            Converter <b>para</b>
-            <select>
-                <option>U$ Dolar Americano</option>
-                <option>€ Euro Europeu</option>
-                <option>£ Libra Esterlina</option>
-                <option>₿ Bitcoin</option>
-            </select>
-        </label>
+            <label>
+                Converter <b>para</b>
+                <select class="currency-select">
+                    <option value="dolar">U$ Dolar Americano</option>
+                    <option value="euro">€ Euro Europeu</option>
+                    <option value="libras">£ Libra Esterlina</option>
+                    <option value="bitcoin">₿ Bitcoin</option>
+                </select>
+            </label>
 
-        <label>
-            Valor
-            <input placeholder="R$ 10.000,00">
-        </label>
+            <label>
+                Valor
+                <input class="input-currency" placeholder="R$ 10.000,00">
+            </label>
 
-        <button>Converter</button>
+            <button class="convert-button">Converter</button>
 
-        <section>
-            <div class="currency-box">
-                <img src="./assets/brasil.png" alt="logo-moeda-a-converter">
-                <p class="currency">Real</p>
-                <p class="currency-value">R$ 0,00</p>
-                <img class="arrow-img" src="./assets/seta.png" alt="seta">
-            </div>
+            <section>
+                <div class="currency-box">
+                    <img src="./assets/real.png" alt="logo-moeda-a-converter">
+                    <p id="currency" class="currency">Real</p>
+                    <p class="currency-value-to-convert">R$ 0,00</p>
+                    <img class="arrow-img" src="./assets/seta.png" alt="seta">
+                </div>
 
-            <div class="currency-box">
-                <img src="./assets/usa.png" alt="logo-moeda-a-converter">
-                <p class="currency">Dolar</p>
-                <p class="currency-value">U$ 0,00</p>
-            </div>
-        </section>
-    </main>
+                <div class="currency-box">
+                    <img class="currency-img" src="./assets/dolar.png" alt="logo-moeda-a-converter">
+                    <p id="currency-name" class="currency">Dolar americano</p>
+                    <p class="currency-value">U$ 0,00</p>
+                </div>
+            </section>
+        </main>
 
     </div>
 </body>
+
+
+<script src="./scripts.js"></script>
 
 </html>
