--- a/Exercicios/ProjetoCriativoANYCars/index.html
+++ b/Exercicios/ProjetoCriativoANYCars/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,6 +15,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FP Sellection</title>
 </head>
+
 <body>
     <header class="container">
         <img src="./source/logo.png" alt="logo-da-pagina">
@@ -27,65 +29,73 @@
     </header>
     <main>
 
-    <section>
-        <div class="list">
-            <div class="item active">
-                <div class="car-img">
-                    <img src="./source/1.png" alt="imagem-carro">
+        <section class="containersec">
+            <div class="list">
+                <div class="item active">
+                    <div class="car-img">
+                        <img src="./source/1.png" alt="imagem-carro">
+                    </div>
+                    <div class="content">
+                        <p class="car-information">
+                            Novo
+                        </p>
+                        <h2>911 Turbo</h2>
+                        <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores
+                            inventore quis laudantium voluptatibus perspiciatis eos optio praesentium a enim nulla ipsam
+                            ut reiciendis nobis beatae consequatur iusto nostrum, temporibus modi.</p>
+                        <button class="information">Saiba mais</button>
+                    </div>
                 </div>
-                <div class="content">
-                    <p class="car-information">
-                        Novo
-                    </p>
-                    <h2>911 Turbo</h2>
-                    <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores inventore quis laudantium voluptatibus perspiciatis eos optio praesentium a enim nulla ipsam ut reiciendis nobis beatae consequatur iusto nostrum, temporibus modi.</p>
-                    <button class="information">Saiba mais</button>
+
+                <div class="item">
+                    <div class="car-img">
+                        <img src="./source/2.png" alt="imagem-carro">
+                    </div>
+                    <div class="content">
+                        <p class="car-information">
+                            Conversivel
+                        </p>
+                        <h2>Ferrari</h2>
+                        <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores
+                            inventore quis laudantium voluptatibus perspiciatis eos optio praesentium a enim nulla ipsam
+                            ut reiciendis nobis beatae consequatur iusto nostrum, temporibus modi.</p>
+                        <button class="information">Saiba mais</button>
+                    </div>
+                </div>
+
+                <div class="item">
+                    <div class="car-img">
+                        <img src="./source/3.png" alt="imagem-carro">
+                    </div>
+                    <div class="content">
+                        <p class="car-information">
+                            Aspec PPL600
+                        </p>
+                        <h2>Lamborghini</h2>
+                        <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores
+                            inventore quis laudantium voluptatibus perspiciatis eos optio praesentium a enim nulla ipsam
+                            ut reiciendis nobis beatae consequatur iusto nostrum, temporibus modi.</p>
+                        <button class="information">Saiba mais</button>
+                    </div>
                 </div>
             </div>
+            <div class="arrows">
+                <button id="prev"><img src="./source/arrow.png" alt="seta-esquerda"></button>
+                <button id="next"><img src="./source/arrow.png" alt="seta-direita"></button>
 
-            <div class="item">
-                <div class="car-img">
-                    <img src="./source/2.png" alt="imagem-carro">
-                </div>
-                <div class="content">
-                    <p class="car-information">
-                        Conversivel
-                    </p>
-                    <h2>Ferrari</h2>
-                    <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores inventore quis laudantium voluptatibus perspiciatis eos optio praesentium a enim nulla ipsam ut reiciendis nobis beatae consequatur iusto nostrum, temporibus modi.</p>
-                    <button class="information">Saiba mais</button>
-                </div>
             </div>
 
-            <div class="item">
-                <div class="car-img">
-                    <img src="./source/3.png" alt="imagem-carro">
-                </div>
-                <div class="content">
-                    <p class="car-information">
-                        Aspec PPL600
-                    </p>
-                    <h2>Lamborghini</h2>
-                    <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores inventore quis laudantium voluptatibus perspiciatis eos optio praesentium a enim nulla ipsam ut reiciendis nobis beatae consequatur iusto nostrum, temporibus modi.</p>
-                    <button class="information">Saiba mais</button>
-                </div>
+            <div class="indicators">
+                <div class="number">01</div>
+                <ul>
+                    <li class="active"></li>
+                    <li></li>
+                    <li></li>
+                </ul>
             </div>
-        </div>
-        <div class="arrows">
-            <button><img src="./source/arrow.png" alt="seta-esquerda"></button>
-            <button><img src="./source/arrow.png" alt="seta-direita"></button>
-        
-        </div>
+        </section>
 
-        <div class="indicators">
-            <div class="number">01</div>
-            <ul>
-                <li class="active"></li>
-                <li></li>
-                <li></li>
-            </ul>
-        </div>
-    </section>
-    
+        <script src="./scripts.js"></script>
 </body>
+
 </html>
