edit: criação projeto carrossel

--- a/Exercicios/ProjetoCriativoANYCars/index.html
+++ b/Exercicios/ProjetoCriativoANYCars/index.html
@@ -37,7 +37,7 @@
                     </div>
                     <div class="content">
                         <p class="car-information">
-                            Novo
+                            Porsche
                         </p>
                         <h2>911 Turbo</h2>
                         <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores
