--- a/Desafios Propostos/Projeto Carrossel/index.html
+++ b/Desafios Propostos/Projeto Carrossel/index.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Alkatra:wght@400..700&family=Edu+QLD+Beginner:wght@400..700&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Alkatra:wght@400..700&family=Edu+QLD+Beginner:wght@400..700&display=swap"
+        rel="stylesheet">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Alkatra:wght@400..700&display=swap" rel="stylesheet">
-    
+
     <link rel="stylesheet" href="styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Apprécie la vie</title>
 </head>
+
 <body>
     <div>
         <header class="head">
@@ -29,19 +33,23 @@
                 <img src="./source/img1.jpg" alt="imagem-site">
                 <div class="content">
                     <h2 class="title">Bali</h2>
-                    <p class="description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus laborum consectetur non, soluta eos ipsam fuga nulla qui architecto voluptatum culpa est temporibus amet minima nemo quos ducimus tenetur assumenda!</p>
+                    <p class="description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus laborum
+                        consectetur non, soluta eos ipsam fuga nulla qui architecto voluptatum culpa est temporibus amet
+                        minima nemo quos ducimus tenetur assumenda!</p>
                     <div class="buttons">
                         <button>Saiba Mais</button>
                         <button>Acessar</button>
                     </div>
                 </div>
             </div>
-        
+
             <div class="list-item">
                 <img src="./source/img2.jpg" alt="imagem-site">
                 <div class="content">
-                    <h2  class="title">Paris</h2>
-                    <p class="description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus laborum consectetur non, soluta eos ipsam fuga nulla qui architecto voluptatum culpa est temporibus amet minima nemo quos ducimus tenetur assumenda!</p>
+                    <h2 class="title">Paris</h2>
+                    <p class="description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus laborum
+                        consectetur non, soluta eos ipsam fuga nulla qui architecto voluptatum culpa est temporibus amet
+                        minima nemo quos ducimus tenetur assumenda!</p>
                     <div class="buttons">
                         <button>Saiba Mais</button>
                         <button>Acessar</button>
@@ -52,8 +60,10 @@
             <div class="list-item">
                 <img src="./source/img3.jpg" alt="imagem-site">
                 <div class="content">
-                    <h2  class="title">Roma</h2>
-                    <p class="description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus laborum consectetur non, soluta eos ipsam fuga nulla qui architecto voluptatum culpa est temporibus amet minima nemo quos ducimus tenetur assumenda!</p>
+                    <h2 class="title">Roma</h2>
+                    <p class="description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus laborum
+                        consectetur non, soluta eos ipsam fuga nulla qui architecto voluptatum culpa est temporibus amet
+                        minima nemo quos ducimus tenetur assumenda!</p>
                     <div class="buttons">
                         <button>Saiba Mais</button>
                         <button>Acessar</button>
@@ -64,8 +74,10 @@
             <div class="list-item">
                 <img src="./source/img4.jpg" alt="imagem-site">
                 <div class="content">
-                    <h2 class="title" >Veneza</h2>
-                    <p class="description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus laborum consectetur non, soluta eos ipsam fuga nulla qui architecto voluptatum culpa est temporibus amet minima nemo quos ducimus tenetur assumenda!</p>
+                    <h2 class="title">Veneza</h2>
+                    <p class="description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus laborum
+                        consectetur non, soluta eos ipsam fuga nulla qui architecto voluptatum culpa est temporibus amet
+                        minima nemo quos ducimus tenetur assumenda!</p>
                     <div class="buttons">
                         <button>Saiba Mais</button>
                         <button>Acessar</button>
@@ -77,7 +89,9 @@
                 <img src="./source/img5.JPG" alt="imagem-site">
                 <div class="content">
                     <h2 class="title">Tailândia</h2>
-                    <p class="description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus laborum consectetur non, soluta eos ipsam fuga nulla qui architecto voluptatum culpa est temporibus amet minima nemo quos ducimus tenetur assumenda!</p>
+                    <p class="description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus laborum
+                        consectetur non, soluta eos ipsam fuga nulla qui architecto voluptatum culpa est temporibus amet
+                        minima nemo quos ducimus tenetur assumenda!</p>
                     <div class="buttons">
                         <button>Saiba Mais</button>
                         <button>Acessar</button>
@@ -89,7 +103,9 @@
                 <img src="./source/img6.jpg" alt="imagem-site">
                 <div class="content">
                     <h2 class="title">Canadá</h2>
-                    <p class="description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus laborum consectetur non, soluta eos ipsam fuga nulla qui architecto voluptatum culpa est temporibus amet minima nemo quos ducimus tenetur assumenda!</p>
+                    <p class="description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus laborum
+                        consectetur non, soluta eos ipsam fuga nulla qui architecto voluptatum culpa est temporibus amet
+                        minima nemo quos ducimus tenetur assumenda!</p>
                     <div class="buttons">
                         <button>Saiba Mais</button>
                         <button>Acessar</button>
@@ -101,7 +117,9 @@
                 <img src="./source/img7.jpg" alt="imagem-site">
                 <div class="content">
                     <h2 class="title">Chile</h2>
-                    <p class="description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus laborum consectetur non, soluta eos ipsam fuga nulla qui architecto voluptatum culpa est temporibus amet minima nemo quos ducimus tenetur assumenda!</p>
+                    <p class="description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus laborum
+                        consectetur non, soluta eos ipsam fuga nulla qui architecto voluptatum culpa est temporibus amet
+                        minima nemo quos ducimus tenetur assumenda!</p>
                     <div class="buttons">
                         <button>Saiba Mais</button>
                         <button>Acessar</button>
@@ -113,7 +131,9 @@
                 <img src="./source/img8.jpg" alt="imagem-site">
                 <div class="content">
                     <h2 class="title">Peru</h2>
-                    <p class="description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus laborum consectetur non, soluta eos ipsam fuga nulla qui architecto voluptatum culpa est temporibus amet minima nemo quos ducimus tenetur assumenda!</p>
+                    <p class="description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus laborum
+                        consectetur non, soluta eos ipsam fuga nulla qui architecto voluptatum culpa est temporibus amet
+                        minima nemo quos ducimus tenetur assumenda!</p>
                     <div class="buttons">
                         <button>Saiba Mais</button>
                         <button>Acessar</button>
@@ -125,7 +145,9 @@
                 <img src="./source/img9.jpg" alt="imagem-site">
                 <div class="content">
                     <h2 class="title">Suiça</h2>
-                    <p class="description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus laborum consectetur non, soluta eos ipsam fuga nulla qui architecto voluptatum culpa est temporibus amet minima nemo quos ducimus tenetur assumenda!</p>
+                    <p class="description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus laborum
+                        consectetur non, soluta eos ipsam fuga nulla qui architecto voluptatum culpa est temporibus amet
+                        minima nemo quos ducimus tenetur assumenda!</p>
                     <div class="buttons">
                         <button>Saiba Mais</button>
                         <button>Acessar</button>
@@ -209,11 +231,13 @@
         </div>
 
         <div class="arrows">
-            <button class="back"> < </button>
-            <button class="next"> > </button>
+            <button class="back">
+                < </button>
+                    <button class="next"> > </button>
         </div>
     </main>
 
     <script src="./scripts.js"></script>
 </body>
+
 </html>
