edit: aulas atualizadas

--- a/Aulas/javascript 2 NODE JS/Exercicios Java Script/12 - Desafio  For Corrigido/index.html
+++ b/Aulas/javascript 2 NODE JS/Exercicios Java Script/12 - Desafio  For Corrigido/index.html
@@ -10,7 +10,8 @@
 
 <body>
     <div class="container">
-        <h1>Lista de Contatos</h1>
+        <h1>☎️</h1>
+        <h1>Procurar contatos</h1>
         <input id="input" placeholder="Digite o contato ">
         <button onclick="searchContact()">Procurar</button>
         <p></p>
