edit: player Music

--- a/Desafios Propostos/Player Music/index.html
+++ b/Desafios Propostos/Player Music/index.html
@@ -3,7 +3,6 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
         integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous" />
@@ -44,8 +43,8 @@
         <i class="fas fa-step-forward setas proximo"></i>
     </div>
 
-    <audio src="./music/Cash - SLAP HOUSE MAFIA.mp3"></audio>
-    
+    <audio class="audio" src="./music/Trump It - Illusionize.mp3"></audio>
+
     <script src="./script.js"></script>
 </body>
 
