--- a/Desafios Propostos/Player Music/index.html
+++ b/Desafios Propostos/Player Music/index.html
@@ -43,7 +43,7 @@
         <i class="fas fa-step-forward setas proximo"></i>
     </div>
 
-    <audio class="audio" src="./music/Trump It - Illusionize.mp3"></audio>
+    <audio class="audio" src="./music/Cash - SLAP HOUSE MAFIA.mp3"></audio>
 
     <script src="./script.js"></script>
 </body>
