--- a/Desafios Propostos/Player Music/index.html
+++ b/Desafios Propostos/Player Music/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
         integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,8 +16,12 @@
 </head>
 
 <body>
+    <h1>⚡EDM Spoty⚡</h1>
     <img src="./resource/img-1.jpg" alt="Img-EDM-Spoty">
-    <div class="description">
+    <div data-aos="fade-left"
+    data-aos-anchor="#example-anchor"
+    data-aos-offset="500"
+    data-aos-duration="1000" class="description">
         <h2>Nome da Música</h2>
         <i>Autor</i>
     </div>
@@ -43,9 +48,14 @@
         <i class="fas fa-step-forward setas proximo"></i>
     </div>
 
-    <audio class="audio" src="./music/Digital Viewpoints - Reflection.mp3" type='audio/mpeg'></audio>
+    <audio class="audio" src="./music/Alienígena (Original Mix) ft. Alien Code - Chapeleiro.mp3" type='audio/mpeg'></audio>
 
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
     <script src="./script.js"></script>
+   
 </body>
 
 </html>
