--- a/Desafios Propostos/Portifolio/index.html
+++ b/Desafios Propostos/Portifolio/index.html
@@ -1,11 +1,279 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="style.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portifolio Dev</title>
 </head>
+
 <body>
-    
+    <header class="header">
+        <a href="#home" class="logo">Alisson N. <span>Claro</span></a>
+
+        <i class='bx bx-menu' id="menu-icon"></i>
+
+        <nav class="navbar">
+            <a href="#home" class="active">Inicio</a>
+            <a href="#education">Formação</a>
+            <a href="#services">Serviços</a>
+            <a href="#testimonials">Depoimentos</a>
+            <a href="#contact">Contato</a>
+        </nav>
+    </header>
+
+    <section class="home" id="home">
+        <div class="home-content">
+            <h1>Ola, sou o <span>Alisson</span></h1>
+            <h3 class="text-animation">Sou <span></span></h3>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia obcaecati culpa atque tempore
+                consequatur sequi ratione! Illum possimus, nobis et earum, ea corporis temporibus incidunt adipisci
+                iusto dolor totam libero!</p>
+
+            <div class="social-icons">
+                <a href="#"><i class='bx bxl-linkedin'></i></a>
+                <a href="#"><i class='bx bxl-github'></i></a>
+                <a href="#"><i class='bx bxs-envelope'></i></a>
+            </div>
+
+            <div class="btn-group">
+                <a href="#" class="btn">Contratar</a>
+                <a href="#contact" class="btn">Contato</a>
+            </div>
+        </div>
+
+        <div class="home-img">
+            <img src="/assets/image.png" alt="">
+        </div>
+
+    </section>
+
+    <section class="education" id="education">
+        <h2 class="heading">Formação</h2>
+
+        <div class="timeline-items">
+
+            <div class="timeline-item">
+                <div class="timeline-dot"></div>
+                <div class="timeline-date">2011 - 2014</div>
+                <div class="timeline-content">
+                    <h3>Curso Superior</h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fuga, distinctio est placeat
+                        reprehenderit ea nam, laboriosam exercitationem neque temporibus officia nisi odio
+                        assumenda?
+                        Ducimus, eveniet! Ex, et dolore. Ipsum, assumenda?</p>
+                </div>
+            </div>
+
+            <div class="timeline-item">
+                <div class="timeline-dot"></div>
+                <div class="timeline-date">2024 - 2025</div>
+                <div class="timeline-content">
+                    <h3>Curso Extensivo</h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fuga, distinctio est placeat
+                        reprehenderit ea nam, laboriosam exercitationem neque temporibus officia nisi odio
+                        assumenda?
+                        Ducimus, eveniet! Ex, et dolore. Ipsum, assumenda?</p>
+                </div>
+            </div>
+
+            <div class="timeline-item">
+                <div class="timeline-dot"></div>
+                <div class="timeline-date">2021 - 2023</div>
+                <div class="timeline-content">
+                    <h3>Experiencias Profissional 1</h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fuga, distinctio est placeat
+                        reprehenderit ea nam, laboriosam exercitationem neque temporibus officia nisi odio
+                        assumenda?
+                        Ducimus, eveniet! Ex, et dolore. Ipsum, assumenda?</p>
+                </div>
+            </div>
+
+            <div class="timeline-item">
+                <div class="timeline-dot"></div>
+                <div class="timeline-date">2023 - 2024</div>
+                <div class="timeline-content">
+                    <h3>Experiencias Profissional 2</h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fuga, distinctio est placeat
+                        reprehenderit ea nam, laboriosam exercitationem neque temporibus officia nisi odio
+                        assumenda?
+                        Ducimus, eveniet! Ex, et dolore. Ipsum, assumenda?</p>
+                </div>
+            </div>
+
+        </div>
+    </section>
+
+    <section class="services" id="services">
+        <h2 class="heading">Serviços</h2>
+
+        <div class="services-container">
+            <div class="service-box">
+                <div class="service-info">
+                    <h4>Frontend Designer</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi repudiandae dolorem optio, esse
+                        ut quos magni excepturi possimus error eligendi harum quidem quibusdam? Nisi, rem odio tenetur
+                        autem eligendi quos.</p>
+                </div>
+            </div>
+
+            <div class="service-box">
+                <div class="service-info">
+                    <h4>Desenvolvimento Web</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi repudiandae dolorem optio, esse
+                        ut quos magni excepturi possimus error eligendi harum quidem quibusdam? Nisi, rem odio tenetur
+                        autem eligendi quos.</p>
+                </div>
+            </div>
+
+            <div class="service-box">
+                <div class="service-info">
+                    <h4>Analista de sistemas</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi repudiandae dolorem optio, esse
+                        ut quos magni excepturi possimus error eligendi harum quidem quibusdam? Nisi, rem odio tenetur
+                        autem eligendi quos.</p>
+                </div>
+            </div>
+
+            <div class="service-box">
+                <div class="service-info">
+                    <h4>Web Designer</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi repudiandae dolorem optio, esse
+                        ut quos magni excepturi possimus error eligendi harum quidem quibusdam? Nisi, rem odio tenetur
+                        autem eligendi quos.</p>
+                </div>
+            </div>
+
+            <div class="service-box">
+                <div class="service-info">
+                    <h4>Software Tester</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi repudiandae dolorem optio, esse
+                        ut quos magni excepturi possimus error eligendi harum quidem quibusdam? Nisi, rem odio tenetur
+                        autem eligendi quos.</p>
+                </div>
+            </div>
+
+        </div>
+    </section>
+
+    <section class="testimonials" id="testimonials">
+        <div class="testimonials-box">
+            <h2 class="heading">Depoimentos</h2>
+
+            <div class="wrapper">
+
+                <div class="testimonial-item">
+                    <img src="/assets/1.jpg" alt="">
+                    <h2>Marilyn</h2>
+
+                    <div class="rating">
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
+                    </div>
+                    <p>"Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptate rem modi, itaque eius sit
+                        dolor libero maiores ea. Cum totam, neque officiis delectus nihil nulla distinctio. Blanditiis
+                        ut cupiditate illum?</p>
+                </div>
+
+                <div class="testimonial-item">
+                    <img src="/assets/2.jpg" alt="">
+                    <h2>Julia</h2>
+
+                    <div class="rating">
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
+                    </div>
+                    <p>"Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptate rem modi, itaque eius sit
+                        dolor libero maiores ea. Cum totam, neque officiis delectus nihil nulla distinctio. Blanditiis
+                        ut cupiditate illum?</p>
+                </div>
+
+                <div class="testimonial-item">
+                    <img src="/assets/3.jpg" alt="">
+                    <h2>Rebecca</h2>
+
+                    <div class="rating">
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
+                    </div>
+                    <p>"Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptate rem modi, itaque eius sit
+                        dolor libero maiores ea. Cum totam, neque officiis delectus nihil nulla distinctio. Blanditiis
+                        ut cupiditate illum?</p>
+                </div>
+            </div>
+
+        </div>
+    </section>
+
+    <section class="contact" id="contact">
+        <h2 class="heading"><span>Me</span> contate.</h2>
+
+        <form action="">
+            <div class="input-group">
+                <div class="input-box">
+                    <input type="text" placeholder="Nome completo">
+                    <input type="email" placeholder="E-mail">
+                </div>
+                <div class="input-box">
+                    <input type="number" placeholder="Numero de telefone">
+                    <input type="text" placeholder="Assunto">
+                </div>
+            </div>
+
+            <div class="input-group-2">
+                <textarea name="" id="" cols="30" rows="10" placeholder="Sua mensagem"></textarea>
+                <input type="submit" value="Enviar mensagem" class="btn">
+            </div>
+        </form>
+    </section>
+
+    <footer class="footer">
+        <div class="social">
+            <a href="#"><i class='bx bxl-linkedin'></i></a>
+            <a href="#"><i class='bx bxl-github'></i></a>
+            <a href="#"><i class='bx bxs-envelope'></i></a>
+        </div>
+
+        <ul class="list">
+            <li>
+                <a href="#">FAQ.</a>
+            </li>
+
+            <li>
+                <a href="#">Serviços.</a>
+            </li>
+
+            <li>
+                <a href="#">Sobre mim.</a>
+            </li>
+
+            <li>
+                <a href="#">Contato.</a>
+            </li>
+
+            <li>
+                <a href="#">Depoimentos.</a>
+            </li>
+        </ul>
+
+        <p class="copyright">
+            ⓒ Alisson N. Claro | Todos os direitos reservados.
+        </p>
+    </footer>
+
+    <script src="script.js"></script>
 </body>
+
 </html>
