--- a/Aulas/javascript 2 NODE JS/Exercicios Java Script/4 - Exercicio JS Conversor/index.html
+++ b/Aulas/javascript 2 NODE JS/Exercicios Java Script/4 - Exercicio JS Conversor/index.html
@@ -21,11 +21,11 @@
             <label>
                 Converter <b>de</b>
                 <select class="currency-select-first">
-                    <option value="real">R$ Real Brasileiro</option>
-                    <option value="dolar">U$ Dolar Americano</option>
-                    <option value="euro">€ Euro Europeu</option>
-                    <option value="libras">£ Libra Esterlina</option>
-                    <option value="bitcoin">₿ Bitcoin</option>
+                    <option class="real" value="real">R$ Real Brasileiro</option>
+                    <option class="dolar"value="dolar">U$ Dolar Americano</option>
+                    <option class="euro" value="euro">€ Euro Europeu</option>
+                    <option class="libras" value="libras">£ Libra Esterlina</option>
+                    <option class="bitcoin" value="bitcoin">₿ Bitcoin</option>
 
                 </select>
             </label>
@@ -33,11 +33,11 @@
             <label>
                 Converter <b>para</b>
                 <select class="currency-select">
-                    <option value="real">R$ Real Brasileiro</option>
-                    <option value="dolar">U$ Dolar Americano</option>
-                    <option value="euro">€ Euro Europeu</option>
-                    <option value="libras">£ Libra Esterlina</option>
-                    <option value="bitcoin">₿ Bitcoin</option>
+                    <option class="dolar" value="dolar">U$ Dolar Americano</option>
+                    <option class="euro" value="euro">€ Euro Europeu</option>
+                    <option class="libras" value="libras">£ Libra Esterlina</option>
+                    <option class="real" value="real">R$ Real Brasileiro</option>
+                    <option class="bitcoin" value="bitcoin">₿ Bitcoin</option>
                 </select>
             </label>
 
